# dictos

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
dictos/: SymbolicFiniteDifference.py  SymbolicInterpolation.py  __init__.py  defaults.py  error.py  finite_difference.py  interpolation.py  lagrangian_poly.py  lagrangian_polynomial.py  linalg.py  spec.py  stencil.py  taylor_expansion.py  utils.py
dictos/calculus/: exceptions.py  finite_difference.py
dictos/core/: expr.py  grid_type.py
dictos/discrete/: exceptions.py  stencil.py
dictos/error/: finite_difference.py  internal.py  lagrangian_polynomial.py  linear_algebra.py  stencil.py  taylor_expansion.py  utils.py
dictos/filter/: filter.py
dictos/linalg/: linalg.py
dictos/poly/: exceptions.py  interpolation.py  lagrangian_polynomial.py
dictos/series/: taylor_expansion.py
dictos/utilities/: spec.py  utils.py
test/: gen.py  test_error_finite_difference.py  test_error_internal.py  test_error_lagrangian_polynomial.py  test_error_linear_algebra.py  test_error_stencil.py  test_error_taylor_expansion.py  test_finite_difference.py  test_gen.py  test_interpolation.py  test_lagrangian_polynomial.py  test_linalg.py  test_spec.py  test_stencil.py  test_taylor_expansion.py  test_utils.py
test/calculus/: test_exceptions.py  test_finite_difference.py
test/discrete/: test_exceptions.py  test_stencil.py
test/filter/: test_filter.py
test/linalg/: test_exceptions.py  test_linalg.py
test/poly/: test_exceptions.py  test_interpolation.py  test_lagrangian_polynomial.py
test/series/: test_exceptions.py  (+1 more)
(+6 files in other folders)
