[metadata]
name = dictos
description = dictos, Symbolic discretization tools for the finite difference method on a regular and staggered grid.
long_description = file: README.md
url = https://github.com/degawa/dictos
author = Tomohiro Degawa
license = MIT
license_files = LICENSE
version = attr: dictos.__version__.__version__
keywords = "finite-difference", "interpolation", "extrapolation", "scientific-computing"
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
install_requires =
    numpy
    sympy

[options.packages.find]
where = .
include=
    dictos
    dictos.error
exclude=
    test
